# myfirstraytracer

./: README.md
src/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Heart.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  PhotonMap.cpp  PhotonMap.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Test.cpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
